--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-scripts": "4.0.3",
+    "typeface-roboto": "^1.1.13",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
